# Hotplates

./: .gitignore  LICENSE  README.md  pyproject.toml  readthedocs.yaml  requirements.txt
Hotplates/: MSHPro.py  MSHProCommunication.py  SerialThreadedDuplex.py  __init__.py
docs/source/: conf.py  index.rst
