[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Hotplates"
version = "0.3.0"
description = "Tools for serial communications with hotplates."
readme = "README.rst"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Alistair Boyer", email = "Hotplates@boyer-research.com"},
]
keywords = [
  "hotplate",
  "serial",
  "threaded"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Terminals :: Serial",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "pyserial > 2.0",
]

[project.urls]

[project.scripts]

[project.optional-dependencies]

[options.packages.find]
where = ["Hotplates"]
include = ["*"]

[tool.mypy]
